[package]
name = "lmbot"
version = "0.1.0"
edition = "2021"

[dependencies]
google-cloud-auth = "0.15.0"
google-cloud-gax = "0.17.0"
google-cloud-pubsub = "0.25.0"
log = "0.4.21"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.11"
windows-service = "0.7.0"
directories = "5.0"
simple-log = "1.5.1"
